import {
  Column,
  Entity,
  PrimaryGeneratedColumn,
  CreateDateColumn,
  UpdateDateColumn,
  ManyToMany,
} from 'typeorm';

import { DoctorEntity } from '../../users/entities/doctor.entity'; 

@Entity('specialties')
export class Specialty {
  @PrimaryGeneratedColumn()
  id!: number;

  @Column({ unique: true })
  name!: string;

  @Column({ type: 'text', nullable: true })
  description!: string;

  // 👇 Adiciona este bloco de código 👇
  @ManyToMany(() => DoctorEntity, (doctor) => doctor.specialties)
  doctors!: DoctorEntity[];

  @CreateDateColumn({ name: 'created_at' })
  createdAt!: Date;

  @UpdateDateColumn({ name: 'updated_at' })
  updatedAt!: Date;
}